--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
                 <form id="item-form">
                   <div class="input-field">
                     <input type="text" name="recipe" id="item" />
-                    <label for="task">New Item</label>
+                    <label for="item">New Item</label>
                   </div>
-
-                  <input type="submit" value="Add Item" class="btn" />
+                  <div class="input-field">
+                    <input type="text" name="" id="ingredient" />
+                    <label for="ingredient">ingredient</label>
+                  </div>
+                  <div id="emptySpace"></div>
+                  <button id="add"><i class="fa fa-plus"></i></button>
+                  <button id="submit">Submit</button>
                 </form>
               </div>
             </div>
-            <div class="card-action">
+            <!-- <div class="card-action">
               <h5 id="task-title">Items</h5>
               <div class="input-field ">
                 <input type="text" name="filter" id="filter" />
@@ -44,7 +49,7 @@
                 <div id="ingredient"></div>
               </ul>
               <a href="#" class="clear-items btn black">Clear Items</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
