--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </form>
               </div>
             </div>
-            <!-- <div class="card-action">
+            <div class="card-action">
               <h5 id="task-title">Items</h5>
               <div class="input-field ">
                 <input type="text" name="filter" id="filter" />
@@ -49,7 +49,7 @@
                 <div id="ingredient"></div>
               </ul>
               <a href="#" class="clear-items btn black">Clear Items</a>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
