--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
               </div>
             </div>
             <div class="card-action">
-              <h5 id="task-title">Items</h5>
-              <div class="input-field ">
+              <h5 id="item-title">Items</h5>
+              <div class="input-field col s12">
                 <input type="text" name="filter" id="filter" />
                 <label for="filter">Filter Items</label>
               </div>
-              <ul class="collection">
-                <div id="ingredient"></div>
-              </ul>
+              <ul id="collection"></ul>
               <a href="#" class="clear-items btn black">Clear Items</a>
             </div>
+            <!-- git  -->
           </div>
         </div>
       </div>
